--- a/environment_windows.yml
+++ b/environment_windows.yml
@@ -18,7 +18,7 @@ dependencies:
   - markupsafe
   - jinja2
   - pyparsing
-  - pydas 
+  - pydas
   - pydot ==1.2.2
   - pydqed
   - pyrdl
@@ -42,3 +42,4 @@ dependencies:
   - mpmath
   - dde
   - pyyaml
+  - scikit-learn
